[gd_scene load_steps=5 format=2]

[ext_resource path="res://Textures/paddle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Paddle_Controller.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Paddle_Powerups_Handler.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 16 )

[node name="Paddle_Controller" type="Node2D" groups=[
"Paddle",
]]
script = ExtResource( 2 )

[node name="Powerups_Handler" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Paddle_UI" type="Area2D" parent="." groups=[
"Paddle",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle_UI"]
shape = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="Paddle_UI"]
margin_left = -48.0
margin_top = -16.0
margin_right = 48.0
margin_bottom = 16.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Props_Container" type="Node2D" parent="."]
[connection signal="area_entered" from="Paddle_UI" to="." method="_on_Paddle_area_entered"]
